--- a/day 5/homework/homework.html
+++ b/day 5/homework/homework.html
@@ -1,10 +1,19 @@
+        <!-- შევქმენი საიტი -->
+<!-- დავწერე სათაური -->
 <h1><b>real madrid</b></h1 > 
+<!-- დავამატე ფოტო     -->
 <img src="real madrid.png" alt="real" width="200">
+<!-- დავწერე სათაური -->
 <h1><b><u>coach:</u></b></h1>
+<!-- დავამატე ფოტო   -->
 <img src="ancceloti.JPG" alt="madrid coach" width="200">
+<!-- დავწერე სათაური -->
 <H1><b><u>best player:</u></b></H1>
+<!-- დავამატე ფოტო     -->
 <img src="ronaldo.JPG " alt="ronaldo" width="200">
+<!-- დავწერე სათაური -->
 <h1><b><u>anthem:</u></b></h1>
+<!-- დავწერე ტექსტი -->
 <h4><u>Historia que tú hiciste
     Historia por hacer
     Porque nadie resiste
@@ -46,3 +55,4 @@
     Y nada más
     Y nada más
     ¡Hala Madrid!</u></h4>
+    <!-- Screenshot 2024-07-13 123417.png -->
